--- a/frontend/components/Item/Item.module.scss
+++ b/frontend/components/Item/Item.module.scss
@@ -20,18 +20,41 @@
   }
 }
 
+@keyframes shrinkWidth {
+  from {
+    max-width: 100%;
+    left: 0%
+  }
+  to {
+    max-width: 50%; /* Adjust the target width as needed */
+    left: 50%;
+  }
+}
+
+@keyframes expandWidth {
+  from {
+    max-width: 50%; /* Start from the shrunken width */
+    left: 50%; /* Start from the shrunken position */
+  }
+  to {
+    max-width: 100%; /* Return to full width */
+    left: 0%; /* Return to original position */
+  }
+}
+
 .Wrapper {
   display: flex;
   height: 30px !important;
   box-sizing: border-box;
+  position: relative;
   transform: translate3d(var(--translate-x, 0), var(--translate-y, 0), 0) scaleX(var(--scale-x, 1))
     scaleY(var(--scale-y, 1));
-  transform-origin: 0 0;
+  //transform-origin: 0 0;
   touch-action: manipulation;
 }
 
 .Wrapper.fadeIn {
-  animation: fadeIn 500ms ease;
+  animation: fadeIn 250ms ease;
 }
 
 .Wrapper.dragOverlay {
@@ -41,6 +64,14 @@
   --box-shadow-picked-up: 0 0 0 calc(1px / var(--scale-x, 1)) rgba(63, 63, 68, 0.05),
     -1px 0 15px 0 rgba(34, 33, 81, 0.01), 0px 15px 15px 0 rgba(34, 33, 81, 0.25);
   z-index: 999;
+}
+
+.Wrapper.expand {
+  animation: expandWidth 200ms forwards; /* 'forwards' ensures the element stays in the final state of the animation */
+}
+
+.Wrapper.shrink {
+  animation: shrinkWidth 200ms forwards; /* 'forwards' keeps the item at the animation's end state */
 }
 
 .Item {
@@ -58,7 +89,7 @@
   border-radius: calc(4px / var(--scale-x, 1));
   box-sizing: border-box;
   list-style: none;
-  transform-origin: 50% 50%;
+  //transform-origin: 50% 50%;
 
   -webkit-tap-highlight-color: transparent;
 
