--- a/frontend/components/Item/Item.module.scss
+++ b/frontend/components/Item/Item.module.scss
@@ -49,6 +49,7 @@
   display: flex;
   flex-grow: 1;
   align-items: center;
+  width: calc(100%);
   padding: 15px 15px;
   background-color: #fff;
   box-shadow:
@@ -61,13 +62,17 @@
 
   -webkit-tap-highlight-color: transparent;
 
+  transform: scale(var(--scale, 1));
+  transition: box-shadow 200ms cubic-bezier(0.18, 0.67, 0.6, 1.22);
+}
+
+.TextContainer {
+  display: inline-block;
   color: #333;
   font-weight: 400;
   font-size: 1rem;
-  white-space: nowrap;
-
-  transform: scale(var(--scale, 1));
-  transition: box-shadow 200ms cubic-bezier(0.18, 0.67, 0.6, 1.22);
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .Item:focus-visible {
@@ -138,7 +143,7 @@
 
 .Actions {
   display: flex;
-  align-self: flex-start;
+  align-items: center;
   margin-top: -12px;
   margin-left: auto;
   margin-bottom: -15px;
