--- a/frontend/app/calendar/CalendarSelectedCourses.module.scss
+++ b/frontend/app/calendar/CalendarSelectedCourses.module.scss
@@ -1,26 +1,17 @@
+@use '/Users/nguyen/Desktop/princeton/cos/cos333/iw-compass/frontend/components/Container/Container.module.scss';
+
 .Container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  height: 50%;
 }
 
-.Header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #e0e0e0;
-}
-
-.Item {
+.item {
   position: relative;
   height: 30px;
   display: flex;
   flex-grow: 1;
   align-items: center;
-  width: calc(100%);
-  padding: 15px 15px;
+  width: 100%;
+  padding: 15px;
   background-image: linear-gradient(to bottom, var(--color_primary), var(--color_secondary));
   box-shadow:
     0 0 0 calc(1px / var(--scale-x, 1)) rgba(63, 63, 68, 0.05),
@@ -31,25 +22,19 @@
   list-style: none;
   transform: scale(var(--scale, 1));
   transition: box-shadow 200ms cubic-bezier(0.18, 0.67, 0.6, 1.22);
-}
 
-.TextContainer {
-  display: inline-block;
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 1rem;
-  flex-grow: 1;
-  overflow: hidden;
-}
+  .text-container {
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 1rem;
+    flex-grow: 1;
+    overflow: hidden;
+  }
 
-.Actions {
-  display: flex;
-  align-items: center;
-  margin-right: -10px;
-}
-
-.SelectedCoursesWrapper {
-  margin-top: 20px;
-  flex-grow: 1;
-  overflow: hidden;
+  .actions {
+    display: flex;
+    align-items: center;
+    margin-right: -10px;
+  }
 }
