--- a/frontend/app/calendar/CalendarSelectedCourses.module.scss
+++ b/frontend/app/calendar/CalendarSelectedCourses.module.scss
@@ -1,4 +1,4 @@
-@use '/Users/nguyen/Desktop/princeton/cos/cos333/iw-compass/frontend/components/Container/Container.module.scss';
+@use '@/components/Container/Container.module.scss';
 
 .Container {
   height: 50%;
