Almost there but not stateful yet.

--- a/frontend/app/calendar/CalendarSelectedCourses.module.scss
+++ b/frontend/app/calendar/CalendarSelectedCourses.module.scss
@@ -1,4 +1,4 @@
-@use '@/components/Container/Container.module.scss';
+@use '../../components/Container/container.module.scss';
 
 .Container {
   height: 50%;
