--- a/frontend/components/Container/Container.module.scss
+++ b/frontend/components/Container/Container.module.scss
@@ -5,7 +5,7 @@
   appearance: none;
   outline: none;
   margin: 10px;
-  border-radius: 6px;
+  border-radius: 8px;
   transition: background-color 350ms ease;
   background-color: rgba(246, 246, 246, 1);
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -13,7 +13,7 @@
 
   ul {
     display: grid;
-    gap: 10px 10px;
+    gap: 8px 8px;
     grid-template-columns: repeat(var(--columns, 1), 1fr);
     grid-auto-rows: auto; /* This ensures that the row height is determined by gap + course card height */
     align-content: start; /* Starts aligning the content from the beginning of the container */
@@ -64,7 +64,7 @@
   }
 
   &.shadow {
-    box-shadow: 0 1px 10px 0 rgba(34, 33, 81, 0.1);
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3), 0 1px 3px 1px rgba(60,64,67,0.15);
   }
 
   &:focus-visible {
