--- a/frontend/components/Container/Container.module.scss
+++ b/frontend/components/Container/Container.module.scss
@@ -4,12 +4,16 @@
   box-sizing: border-box;
   appearance: none;
   outline: none;
-  margin: 10px;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
   border-radius: 8px;
   transition: background-color 350ms ease;
   background-color: rgba(246, 246, 246, 1);
   border: 1px solid rgba(0, 0, 0, 0.05);
   font-size: 1em;
+  width: 24vw;
 
   ul {
     display: grid;
@@ -19,10 +23,10 @@
     align-content: start; /* Starts aligning the content from the beginning of the container */
     list-style: none;
     padding: 5px;
-    margin: 0px;
     max-width: 100%;
     height: 100%; /* Initial ul height is equal to the container height */
     overflow-x: auto;
+    place-items: center;
   }
 
   &.scrollable {
