--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -1,6 +1,6 @@
-@use 'node_modules/tailwindcss/base';
-@use 'node_modules/tailwindcss/components';
-@use 'node_modules/tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --foreground-rgb: 30, 30, 30; /* Dark Gray for text */
@@ -85,10 +85,10 @@ body {
   }
 }
 
-// Base styles for calendar grid
+/* Base styles for calendar grid */
 .container {
   width: 100%;
-  height: 500px; /* Adjust the height as you like */
+  height: 500px;
   background-color: #f0f0f0; /* A light background color */
 }
 
