--- a/frontend/app/calendar/Calendar.scss
+++ b/frontend/app/calendar/Calendar.scss
@@ -31,6 +31,44 @@ $box-shadow-hover:
   }
 }
 
+// Semester pagination
+.carouselTab {
+  transition: background-color 0.2s ease, color 0.2s ease;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+
+  &:active {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  &.selected {
+    background-color: #2196f3;
+    color: white;
+
+    &:hover {
+      background-color: #1976d2;
+    }
+
+    &:active {
+      background-color: #1565c0;
+    }
+  }
+}
+.fade-in {
+  animation: fadeIn 0.5s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 // Calendar Card
 .calendar-card {
   display: flex;
