--- a/frontend/app/calendar/CalendarSearch.scss
+++ b/frontend/app/calendar/CalendarSearch.scss
@@ -3,7 +3,18 @@
 .calendar-search {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  box-sizing: border-box;
+  appearance: none;
+  outline: none;
+  margin: 1vh 0.5vw;
+  border-radius: 8px;
+  transition: background-color 350ms ease;
+  background-color: #f6f6f6;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  font-size: 1em;
+  width: 24vw;
+  height: calc(55vh - 2vh);
+  overflow: hidden;
 
   @include calendar.media-query(768px) {
     padding: 0.5rem;
@@ -12,11 +23,11 @@
   .search-header {
     display: flex;
     flex-direction: column;
-    padding: 1.25rem;
+    padding: 1rem;
     background-color: #ffffff;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 
     .search-input-container {
       position: relative;
@@ -99,10 +110,10 @@
 
       .recent-searches-list {
         display: flex;
-        overflow-x: auto;
+        flex-wrap: wrap;
         padding: 0.5rem 0;
         margin-top: 0.5rem;
-        space-x: 0.5rem;
+        gap: 0.5rem;
 
         .recent-search-item {
           padding: 0.25rem 0.5rem;
@@ -128,11 +139,34 @@
     }
   }
 
-  .recent-searches {
-    margin-top: 1rem;
+  .search-results {
+    flex: 1;
+    overflow-y: auto;
+    background-color: #f6f6f6;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
 
-    @include calendar.media-query(768px) {
-      margin-top: 0.5rem;
+    &:empty::before {
+      content: 'No search results'; // TODO: This is probably redundant. Remove.
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      font-size: 0.875rem;
+      color: rgba(0, 0, 0, 0.5);
     }
+  }
+
+  &.shadow {
+    box-shadow:
+      0 1px 2px 0 rgba(60, 64, 67, 0.3),
+      0 1px 3px 1px rgba(60, 64, 67, 0.15);
+  }
+
+  &:focus-visible {
+    border-color: transparent;
+    box-shadow:
+      0 0 0 2px rgba(255, 255, 255, 0),
+      0 0px 0px 2px #4c9ffe;
   }
 }
