--- a/frontend/components/CalendarTutorial/calendartutorial.module.scss
+++ b/frontend/components/CalendarTutorial/calendartutorial.module.scss
@@ -11,6 +11,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  overflow: auto;
 }
 
 @media (max-width: 600px) {
@@ -47,7 +48,6 @@
 }
 
 .pageContent {
-  margin-bottom: 20px;
   font-size: 16px;
   color: #333;
   min-height: 90px;
@@ -57,7 +57,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
   margin-bottom: 20px;
 }
 
