Dev103Henry- Calendar card enrollment/capacity on hover

--- a/frontend/app/calendar/Calendar.scss
+++ b/frontend/app/calendar/Calendar.scss
@@ -153,6 +153,11 @@ $box-shadow-hover:
     @include ellipsis;
   }
 
+  .subsection-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
   .course-title {
     color: $primary-color;
     flex-grow: 1;
