--- a/frontend/components/RecursiveDropDown/RecursiveDropdown.module.css
+++ b/frontend/components/RecursiveDropDown/RecursiveDropdown.module.css
@@ -19,12 +19,12 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  background-color: #f0f0f0; /* Grey background for categories */
+  background-color: #fff; /* Grey background for categories */
 }
 
 .item {
   padding: 5px 10px;
-  background-color: #f9f9f9; /* Lighter grey background for items */
+  background-color: #fff; /* Lighter grey background for items */
 }
 
 .indicator {
