--- a/frontend/app/calendar/Calendar.css
+++ b/frontend/app/calendar/Calendar.css
@@ -37,11 +37,11 @@
 }
 
 .carouselTab:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #f4f6fa;
 }
 
 .carouselTab:active {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #f4f6fa;
 }
 
 .carouselTab.selected {
@@ -75,7 +75,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: var(--box-shadow-base);
   padding: 8px;
   margin: -1px;
@@ -225,7 +225,7 @@
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  background-color: #f7f7f7;
+  background-color: #f4f6fa;
   border-right: 1px solid #ccc;
   padding: 8px 0;
 }
