--- a/frontend/components/TabbedMenu/TabbedMenu.module.css
+++ b/frontend/components/TabbedMenu/TabbedMenu.module.css
@@ -9,7 +9,7 @@
   overflow: hidden; /* Ensures child elements do not break the rounded corners */
   display: flex;
   flex-direction: column;
-  background-color: rgba(246, 246, 246, 1);
+  background-color: #fff;
 }
 
 .tabMenu {
@@ -17,7 +17,7 @@
   padding: 0;
   margin: 0;
   display: flex;
-  background: #f2f2f2;
+  background: #f4f6fa;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
@@ -40,7 +40,7 @@
 
 /* Convert the nested &:hover to standard CSS */
 .tabMenu li:hover {
-  background-color: #e2e2e2;
+  background-color: #fff;
 }
 
 /* Convert the nested &.active to standard CSS */
@@ -56,5 +56,5 @@
   flex-grow: 1;
   overflow-y: auto; /* Makes the content area scrollable */
   height: 650px; /* Fixed height for the content area */
-  background-color: rgba(246, 246, 246, 1);
+  background-color: #fff;
 }
