Clear recent searcher button UI

--- a/frontend/lib/hoagie-ui/Theme/theme.css
+++ b/frontend/lib/hoagie-ui/Theme/theme.css
@@ -35,7 +35,7 @@ a {
 } 
 
 .hoagie {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Inter', sans-serif !important;
 }
 
 .logo {
