--- a/frontend/lib/hoagie-ui/Theme/theme.css
+++ b/frontend/lib/hoagie-ui/Theme/theme.css
@@ -14,7 +14,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
 
 document, html, body {
   height: 100%;
@@ -35,7 +34,7 @@ a {
 } 
 
 .hoagie {
-  font-family: 'Inter', sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 .logo {
