--- a/frontend/app/calendar/Calendar.scss
+++ b/frontend/app/calendar/Calendar.scss
@@ -97,7 +97,6 @@ $box-shadow-hover:
 .calendar-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   border-radius: 8px;
   @include box-shadow($box-shadow-base);
   padding: 8px;
@@ -112,7 +111,10 @@ $box-shadow-hover:
   &:hover {
     transform: translateY(-4px);
     @include box-shadow($box-shadow-hover);
-
+    
+    .card-enrollment {
+      opacity: 1;
+    }
     &::before {
       opacity: 1;
     }
@@ -137,9 +139,11 @@ $box-shadow-hover:
   .card-header {
     display: flex;
     align-items: center;
-    margin-bottom: 12px;
   }
-
+  .card-container {
+    display: flex;
+    flex-direction: column;
+  }
   .course-code,
   .course-title,
   .time,
@@ -148,6 +152,11 @@ $box-shadow-hover:
     @include ellipsis;
   }
 
+  .subsection-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
   .course-title {
     color: $primary-color;
     flex-grow: 1;
@@ -158,6 +167,11 @@ $box-shadow-hover:
     align-items: flex-start;
   }
 
+  .card-enrollment {
+    opacity: 0;
+    transition: opacity 0.2s ease-out
+  }
+  
   .event-details {
     display: flex;
     flex-direction: column;
