--- a/frontend/components/Tutorial/Tutorial.module.css
+++ b/frontend/components/Tutorial/Tutorial.module.css
@@ -72,7 +72,7 @@
 .pagination {
   display: flex;
   align-items: center;
-  flex-shrink: 0; /* Prevent buttons from shrinking */
+  flex-shrink: 0;
 }
 
 .pagination span {
