--- a/frontend/app/calendar/SelectedCourses.module.css
+++ b/frontend/app/calendar/SelectedCourses.module.css
@@ -8,7 +8,7 @@
   border: 1px solid rgba(0, 0, 0, 0.05);
   font-size: 1em;
   width: 24vw;
-  height: calc(45vh - 2vh);
+  height: calc(46.5vh);
   overflow: hidden;
 }
 
